--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset='utf-8' />
-    <title>ZanSDI | Home</title>
+    <title>ZanSDI Mapbox</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.48.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.48.0/mapbox-gl.css' rel='stylesheet' />
@@ -18,7 +18,7 @@
 mapboxgl.accessToken = 'pk.eyJ1IjoiaWJyYWtoYWxpZCIsImEiOiJjamxjNGFjOTAzZ244M3ZxeXMycTljcG1zIn0.174XiMqxg9uMkqYMRCOXig';
 var map = new mapboxgl.Map({
     container: 'map', // container id
-    style: 'mapbox://styles/mapbox/streets-v9', // stylesheet location
+    style: 'mapbox://styles/ibrakhalid/cjlj8ma6o2ah42ro3ytpp1agb', // stylesheet location
     center: [39.21, -6.165], // starting position [lng, lat]
     zoom: 9 // starting zoom
 });
