--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ var bounds = [
 
 var map = new mapboxgl.Map({
     container: 'map', // container id
-    style: 'mapbox://styles/ibrakhalid/cjlkidw2e34uc2sqq3rxmxg2k', // stylesheet location
+    style: 'mapbox://styles/ibrakhalid/cjlkidw2e34uc2sqq3rxmxg2k?fresh=true', // stylesheet location
     center: [39.21, -6.165], // starting position [lng, lat]
     zoom: 9, // starting zoom
     maxBounds: bounds // Sets bounds as max
